--- a/css/common-style.css
+++ b/css/common-style.css
@@ -24,18 +24,18 @@ h2 {
 
 #wrapper {
     /* The kindle removes the scroll bars if the width of the page is 607 px or more... */
-    width: 607px;
-    min-height: 675px;
-    /*background-color: white;*/
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAICAYAAADA+m62AAAAPklEQVQYV2NkwAT/gUKM6MLoAjBFGIqRFaJLovBhCrFaB7QeLg5SiEsRzJlgeQxHY/EcSOg/sQoxgwGHiQwA+f4KCL3Y/AQAAAAASUVORK5CYII=) repeat;
+    width: 1264px;
+    min-height: 1448px;
+    background-color: white;
+    /*background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAICAYAAADA+m62AAAAPklEQVQYV2NkwAT/gUKM6MLoAjBFGIqRFaJLovBhCrFaB7QeLg5SiEsRzJlgeQxHY/EcSOg/sQoxgwGHiQwA+f4KCL3Y/AQAAAAASUVORK5CYII=) repeat;*/
     overflow: hidden;
     text-align: left;
 }
 
 #logo {
     text-align: center;
-    width: 110px;
-    height: 78px;
+    width: 210px;
+    height: 200px;
     line-height: 0.9;
     background-color: black;
     color: white;
@@ -57,8 +57,8 @@ h2 {
 #main-menu {
     float: left;
     margin: 15px 0 0 15px;
-    width: 445px;
-    height: 86px;
+    width: 975px;
+    height: 208px;
     overflow: hidden;
     text-align: center;
     line-height: 1;
@@ -67,19 +67,20 @@ h2 {
 }
 
 .main-menu-item {
-    width: 90px;
+    width: 200px;
+    height: 160px;
     display: inline-block;
     border: 3px solid #ccc;
     margin: 10px 5px;
     padding: 10px 0 5px 0;
     text-decoration: none;
     overflow: hidden;
-    font-size: 18px;
+    font-size: 40px;
 }
 
     .main-menu-item svg {
-        height: 24px;
-        width: 24px;
+        height: 60px;
+        width: 60px;
     }
 
         .main-menu-item svg > path {
@@ -155,7 +156,7 @@ h2 {
 
 /******************** CONTENT ********************/
 #floorplan {
-    width: 570px;
+    width: 1200px;
     /*border: 2px solid black;*/
     display: inline-block;
     position: relative;
